refactor css grid

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       
     </head>
     <body>
-        <div class="grid"> 
+        <div class="wrapper"> 
         <div class="header">
             <img src="logo.svg"  class="logo"width="200px" alt="Telegraph" />
         </div>
@@ -24,7 +24,7 @@
         # Duration: 35 mins
         ########## -->
 
-        <comments-component class="comments"/>
+        <comments-component class="comments wraapper cols-2-8 sm-full-width"/>
 
       
         </div>
